# perpetual-touch-id-for-sudo

./: .gitignore  LICENSE  README.md  pam_tid.py  pyproject.toml
src/pam_tid/: pam_tid.py
